<resources>
    <string name="app_name">NFCmaker</string>
    <string name="lsitnumbers">Список номеров</string>
    <string name="listnumberdescription">Инструмент для создания списков с номерами и токенами для NFC-меток с возможностью их передачи</string>
    <string name="writetokens">Запись токенов</string>
    <string name="writetokensdescription">Мастер записи и проверки данных на NFC-токен</string>
    <string name="statistics">Статистика</string>
    <string name="statisticsdescription">Общая сводная информация по количеству выпущенных карт</string>
    <string name="statistic_title">За все время работы системы</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>



    <string name="buttonlogin">Вход</string>
    <string name="text_hello">Добро пожаловать!</string>
    <string name="text_start">Если вы не знаете что это за приложение немедленно выключите его и не запускайте вновь</string>

</resources>